<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_live</name>
  <version>1.0.0</version>
  <description>Tool to view behavior trees at runtime.</description>
  <maintainer email="christian.henkel2@de.bosch.com">hec2le</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>python3-django</exec_depend>  <!-- TODO -->

  <exec_depend>bt_view</exec_depend>
  <exec_depend>btlib</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
