<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>bt_tools</name>
    <version>1.0.0</version>
    <description>bt_tools</description>
    <maintainer email="Christian.Henkel2@de.bosch.com">Christian Henkel</maintainer>

    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>bt_live</exec_depend>
    <exec_depend>bt_view</exec_depend>
    <exec_depend>btlib</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>