<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_bt_live</name>
  <version>1.0.0</version>
  <description>Tool to view behavior trees in rqt at runtime.</description>
  <maintainer email="christian.henkel2@de.bosch.com">hec2le</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <exec_depend>btlib</exec_depend>
  <exec_depend>bt_view</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
